修复customer服务查询redis返回空时报错的bug，实现根据token获取用户信息的功能
