# portal/service/dto/dto.go
@@ -1,0 +1,11 @@
+// author: JGZ
+// time:   2021-02-04 10:00
+package dto
+
+// 用户信息dto
+type UserInfoDto struct {
+	AccessKey string
+	Username  string
+	Email     string
+	Nickname  string
+}
